--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="content-wrap">
           <h2 class="content-title">THIS IS ME, <br> <u>J</u>ESSICA <u>U</u>NDERWOOD.</h2>
           <div class="content-text">
+            <div class="circular-image">
             <img src="IMG/blackandwhite.jpg">
+          </div>
             <p>Self taught developer. I love to write which is how I stumbled upon my passion for development, programming and tech. We'll have to talk about that one day. I also started a business called By Life's Design where we make fun responsive WordPress websites. When I'm not coding or working on a blog, I'm <u>learning</u> about code.... or at Target adding to my collection of stationery products.</p>
           </div>
         </div>
