--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2 class="content-title">THIS IS ME, <br> <u>J</u>ESSICA <u>U</u>NDERWOOD.</h2>
           <div class="content-text">
             <div class="circular-image">
-            <img src="IMG/blackandwhite.jpg">
+            <img src="IMG/blackandwhite.jpg" alt="Jessica Underwood Headshot">
           </div>
             <p>Self taught developer. I love to write which is how I stumbled upon my passion for development, programming and tech. We'll have to talk about that one day. I also started a business called By Life's Design where we make fun responsive WordPress websites. When I'm not coding or working on a blog, I'm <u>learning</u> about code.... or at Target adding to my collection of stationery products.</p>
           </div>
@@ -52,7 +52,7 @@
       <section id="section-c" class="grid">
         <div class="content-wrap">
           <h2 class="content-title">PROJECTS</h2>
-          <img src="IMG/project1.png" alt="">
+          <img src="IMG/project1.png" alt="Veil and Tie Screenshot">
           <a  class="project-link" href="https://veilandtieproductions.com" target="_blank"><h3 class="card-title">WEDDING WEBSITE | VISIT</h3></a>
         </div>
       </section>
@@ -63,7 +63,7 @@
         <div class="box">
           <h2 class="content-title">STAY IN TOUCH</h2>
           <a class="contact" href="https://github.com/Jlenea3" target="_blank"><p>GITHUB</p></a>
-          <a class="contact" href="#"><p>TWITTER</p></a>
+          <p>Resume available upon request.</p>
           <p>jessicaunderwood0203@gmail.com</p>
         </div>
       </section>
