--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <img src="IMG/program.png" alt="HTML5 Logo">
               <div class="card-content">
                 <h3 class="card-title">Front End Development Skills</h3>
-                <p>My skills and learning experience have been centered around HTML5, CSS3, JavaScript, Bootstrap, PHP and WordPress Development. I have also had experience with C, #C and other programming languages through the enrollment of Harvard CS50 and other resources.</p>
+                <p>My skills and learning experience have been centered around HTML5, CSS3, JavaScript, Bootstrap, PHP and WordPress Development. I have also had experience with C, C# and other programming languages through the enrollment of Harvard CS50 and other resources.</p>
               </div>
             </div>
           </li>
