--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="circular-image">
             <img src="IMG/blackandwhite.jpg" alt="Jessica Underwood Headshot">
           </div>
-            <p>Self taught developer. I love to write which is how I stumbled upon my passion for development, programming and tech. We'll have to talk about that one day. I also started a business called By Life's Design where we make fun responsive WordPress websites. I co-founded a tech organization called <a href="https://fearnocode.com" target="_blank">Fear No Code</a> where we aim to break the barriers of tech by providing an opportunity for all to learn to code. When I'm not coding or working on a blog, I'm learning about code and adding to my list of languages.... or at Target adding to my collection of stationery products.</p>
+            <p>Self taught developer. I love to write which is how I stumbled upon my passion for development, programming and tech. We'll have to talk about that one day. I co-founded a tech organization called <a href="https://fearnocode.com" target="_blank">Fear No Code</a> where we aim to break the barriers of tech by providing an opportunity for all to learn to code. When I'm not coding or working on a blog, I'm learning about code and adding to my list of languages.... or at Target adding to my collection of stationery products.</p>
           </div>
         </div>
       </section>
