--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="circular-image">
             <img src="IMG/blackandwhite.jpg" alt="Jessica Underwood Headshot">
           </div>
-            <p>Self taught developer. I love to write which is how I stumbled upon my passion for development, programming and tech. We'll have to talk about that one day. I co-founded a tech organization called <a href="https://fearnocode.com" target="_blank">Fear No Code</a> where we aim to break the barriers of tech by providing an opportunity for all to learn to code. When I'm not coding or working on a blog, I'm learning about code and adding to my list of languages.... or at Target adding to my collection of stationery products.</p>
+            <p>Web Developer. I love to write which is how I stumbled upon my passion for development, programming and tech. We'll have to talk about that one day. I co-founded a tech organization called Fear No Code where we aim to break the barriers of tech by providing an opportunity for all to learn to code. When I'm not coding or working on a blog, I'm learning about code and adding to my list of languages.... or at Target adding to my collection of stationery products.</p>
           </div>
         </div>
       </section>
@@ -40,7 +40,7 @@
               <img src="IMG/program.png" alt="HTML5 Logo">
               <div class="card-content">
                 <h3 class="card-title">Front End Development Skills</h3>
-                <p>My skills and learning experience have been centered around HTML5, CSS3, JavaScript, Bootstrap, PHP and WordPress Development. I have also had experience with C, C# and other programming languages through the enrollment of Harvard CS50 and other resources.</p>
+                <p>My skills and learning experience have been centered around Frontend, Sharepoint, and WordPress Development. I also have experience with content creation as I create content to inspire others to get into the tech industry. My technologies include JavaScript, HTML, CSS, Bootstrap, and Power Apps. </p>
               </div>
             </div>
           </li>
@@ -53,10 +53,10 @@
         <div class="content-wrap">
           <h2 class="content-title">PROJECTS</h2>
           <img src="IMG/project1.png" alt="Veil and Tie Screenshot">
-          <a  class="project-link" href="https://veilandtieproductions.com" target="_blank"><h3 class="card-title">WEDDING WEBSITE | VISIT</h3></a>
+          WEDDING WEBSITE | VISIT
           <hr width="30%">
-          <img src="IMG/Picture1.png" alt="Veil and Tie Screenshot">
-          <a  class="project-link" href="https://fearnocode.com" target="_blank"><h3 class="card-title">FEAR NO CODE TECH ORGANIZATION | VISIT</h3></a>
+          <img src="IMG/Picture1.png" alt="Fear No Code screenshot">
+          FEAR NO CODE TECH ORGANIZATION | VISIT
 
         </div>
       </section>
@@ -74,7 +74,7 @@
     </main>
 
     <footer id="main-footer">
-      <div>2019 BY JESSICA UNDERWOOD</div>
+      <div>2022 BY JESSICA UNDERWOOD</div>
     </footer>
 
   </body>
